add 2cdata to dockerpath in FROM to try to get rid of docker login error

--- a/hadoop/lab01/Dockerfile
+++ b/hadoop/lab01/Dockerfile
@@ -1,4 +1,4 @@
-FROM modern_data_lab:prerequisite AS lab_one
+FROM 2cdata/modern_data_lab:prerequisite AS lab_one
 
 MAINTAINER 2CData <david.callaghan@2c-data.com>
 
