change the download to home and stop creating a hadoop directory. It's breaking symbolic link

--- a/hadoop/lab01/Dockerfile
+++ b/hadoop/lab01/Dockerfile
@@ -3,8 +3,7 @@ FROM 2cdata/modern_data_lab:prerequisite AS lab_one
 MAINTAINER 2CData <david.callaghan@2c-data.com>
 
 # Create a destination, download, uncompress and cleanup Hadoop
-RUN mkdir /usr/hadoop && \
-cd /usr/hadoop && \
+RUN cd ~ && \
 wget http://www-us.apache.org/dist/hadoop/common/hadoop-3.1.1/hadoop-3.1.1.tar.gz && \
 tar zxvf hadoop-3.1.1.tar.gz && \
 rm hadoop-3.1.1.tar.gz && \
