update sed commands to modify configuration files

--- a/hadoop/lab02/Dockerfile
+++ b/hadoop/lab02/Dockerfile
@@ -3,19 +3,31 @@ FROM modern_data_lab:lab_one AS lab_two
 MAINTAINER 2CData <david.callaghan@2c-data.com>
 
 # Install SSH
-RUN ssh-keygen -t rsa -P '' -f ~/.ssh/id_rsa && \
+RUN ssh-keygen -t rsa -P '' -f ~/.ssh/id_rsa
 cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys && \
 chmod 0600 ~/.ssh/authorized_keys
 
 
 
 # modify hadoop files
-cd ~/hadoop-3.1.1/etc/hadoop
-chmod 755 core-site.xml
-sed -i '$d' core-site.xml
-sed -i -e '$a\
-  <property>\
+# https://stackoverflow.com/questions/33439230/how-to-write-commands-with-multiple-lines-in-dockerfile-while-preserving-the-new
+RUN cd ~/hadoop/etc/hadoop  && \
+  chmod 755 core-site.xml  && \
+  sed -i.bak '/configuration/d' core-site.xml && \
+  sed -i -e '$a\
+  <configuration>\
+    <property>\
       <name>fs.defaultFS</name>\
       <value>hdfs://localhost:9000</value>\
-  </property>\
-</configuration>' core-site.xml
+    </property>\
+  </configuration>' core-site.xml
+
+  chmod 755 hdfs-site.xml  && \
+  sed -i.bak '/configuration/d' hdfs-site.xml && \
+  sed -i -e '$a\
+  <configuration>\
+    <property>\
+        <name>dfs.replication</name>\
+        <value>1</value>\
+    </property>\
+  </configuration>' hdfs-site.xml
