set up hadoop cluster dockerfile and config files

--- a/hadoop/lab02/Dockerfile
+++ b/hadoop/lab02/Dockerfile
@@ -1,33 +1,41 @@
+# Create a HAdoop cluster
+
 FROM modern_data_lab:lab_one AS lab_two
 
 MAINTAINER 2CData <david.callaghan@2c-data.com>
 
-# Install SSH
-RUN ssh-keygen -t rsa -P '' -f ~/.ssh/id_rsa
-cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys && \
-chmod 0600 ~/.ssh/authorized_keys
+# Install ssh without key
+RUN ssh-keygen -t rsa -f ~/.ssh/id_rsa -P '' && \
+    cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys && \
+    chmod 0600 ~/.ssh/authorized_keys && \
+    systemctl enable sshd && \
+    systemctl start sshd.service
 
-
+EXPOSE 22
 
 # modify hadoop files
-# https://stackoverflow.com/questions/33439230/how-to-write-commands-with-multiple-lines-in-dockerfile-while-preserving-the-new
-RUN cd ~/hadoop/etc/hadoop  && \
-  chmod 755 core-site.xml  && \
-  sed -i.bak '/configuration/d' core-site.xml && \
-  sed -i -e '$a\
-  <configuration>\
-    <property>\
-      <name>fs.defaultFS</name>\
-      <value>hdfs://localhost:9000</value>\
-    </property>\
-  </configuration>' core-site.xml
+COPY config/* /tmp/
 
-  chmod 755 hdfs-site.xml  && \
-  sed -i.bak '/configuration/d' hdfs-site.xml && \
-  sed -i -e '$a\
-  <configuration>\
-    <property>\
-        <name>dfs.replication</name>\
-        <value>1</value>\
-    </property>\
-  </configuration>' hdfs-site.xml
+# manage configuration files
+RUN mv /tmp/ssh_config ~/.ssh/config && \
+    mv /tmp/hadoop-env.sh /usr/local/hadoop/etc/hadoop/hadoop-env.sh && \
+    mv /tmp/hdfs-site.xml $HADOOP_HOME/etc/hadoop/hdfs-site.xml && \
+    mv /tmp/core-site.xml $HADOOP_HOME/etc/hadoop/core-site.xml && \
+    mv /tmp/mapred-site.xml $HADOOP_HOME/etc/hadoop/mapred-site.xml && \
+    mv /tmp/yarn-site.xml $HADOOP_HOME/etc/hadoop/yarn-site.xml && \
+    mv /tmp/slaves $HADOOP_HOME/etc/hadoop/slaves
+
+# manage executable scripts
+RUN mv /tmp/start-hadoop.sh ~/start-hadoop.sh && \
+    chmod +x ~/start-hadoop.sh && \
+    mv /tmp/run-wordcount.sh ~/run-wordcount.sh && \
+    chmod +x ~/run-wordcount.sh && \
+    chmod +x $HADOOP_HOME/sbin/start-dfs.sh && \
+    chmod +x $HADOOP_HOME/sbin/start-yarn.sh
+
+RUN mkdir -p ~/hdfs/namenode && \
+    mkdir -p ~/hdfs/datanode && \
+    mkdir $HADOOP_HOME/logs
+
+# format namenode
+RUN /usr/local/hadoop/bin/hdfs namenode -format
