There may be a problem with dash versus underscore in the naming. I use underscore in the AS and - in the docker hub tag name

--- a/hadoop/lab02/Dockerfile
+++ b/hadoop/lab02/Dockerfile
@@ -1,6 +1,6 @@
 # Create a HAdoop cluster
 
-FROM 2cdata/modern_data_lab:lab_one AS lab_two
+FROM 2cdata/modern_data_lab:lab-one AS lab_two
 
 MAINTAINER 2CData <david.callaghan@2c-data.com>
 
