change alias from underscore to dash

--- a/hadoop/lab01/Dockerfile
+++ b/hadoop/lab01/Dockerfile
@@ -1,6 +1,6 @@
 # Create a minimal Hadoop install
 
-FROM 2cdata/modern_data_lab:prerequisite AS lab_one
+FROM 2cdata/modern_data_lab:prerequisite AS lab-one
 
 MAINTAINER 2CData <david.callaghan@2c-data.com>
 
