--- a/hadoop/lab02/Dockerfile
+++ b/hadoop/lab02/Dockerfile
@@ -10,9 +10,25 @@ RUN yum -y install openssh-server openssh-clients && \
     cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys
 
 # 91mFailed to get D-Bus connection: Operation not permitted
+# this is how this is supposed to work
+# https://github.com/docker-library/docs/tree/master/centos
+# note the centos s very annoying in Docker for this reason
+# Ubuntu is better at tgis time
+ENV container docker
+RUN (cd /lib/systemd/system/sysinit.target.wants/; for i in *; do [ $i == \
+systemd-tmpfiles-setup.service ] || rm -f $i; done); \
+rm -f /lib/systemd/system/multi-user.target.wants/*;\
+rm -f /etc/systemd/system/*.wants/*;\
+rm -f /lib/systemd/system/local-fs.target.wants/*; \
+rm -f /lib/systemd/system/sockets.target.wants/*udev*; \
+rm -f /lib/systemd/system/sockets.target.wants/*initctl*; \
+rm -f /lib/systemd/system/basic.target.wants/*;\
+rm -f /lib/systemd/system/anaconda.target.wants/*;
+VOLUME [ "/sys/fs/cgroup"
+
+
 RUN systemctl enable sshd
-#RUN systemctl start sshd.service
-RUN systemctl start sshd
+RUN systemctl start sshd.service
 
 # https://hub.docker.com/r/jdeathe/centos-ssh/~/dockerfile/
 # if this doesn't work, I'm jus going to go down to centos 6.5
@@ -48,3 +64,4 @@ RUN /usr/local/hadoop/bin/hdfs namenode -format
 
 # TODO do I need this
 # sbin/start-dfs.sh
+CMD ["/usr/sbin/init"]
