--- a/hadoop/lab02/Dockerfile
+++ b/hadoop/lab02/Dockerfile
@@ -41,13 +41,13 @@ EXPOSE 22
 COPY config/* /tmp/
 
 # manage configuration files
-RUN mv /tmp/ssh_config ~/.ssh/config && \
-    mv /tmp/hadoop-env.sh /HADOOP_HOME/etc/hadoop/hadoop-env.sh && \
-    mv /tmp/hdfs-site.xml $HADOOP_HOME/etc/hadoop/hdfs-site.xml && \
-    mv /tmp/core-site.xml $HADOOP_HOME/etc/hadoop/core-site.xml && \
-    mv /tmp/mapred-site.xml $HADOOP_HOME/etc/hadoop/mapred-site.xml && \
-    mv /tmp/yarn-site.xml $HADOOP_HOME/etc/hadoop/yarn-site.xml && \
-    mv /tmp/slaves $HADOOP_HOME/etc/hadoop/slaves
+RUN cp /tmp/ssh_config ~/.ssh/config && \
+    cp /tmp/hadoop-env.sh /HADOOP_HOME/etc/hadoop/hadoop-env.sh && \
+    cp /tmp/hdfs-site.xml $HADOOP_HOME/etc/hadoop/hdfs-site.xml && \
+    cp /tmp/core-site.xml $HADOOP_HOME/etc/hadoop/core-site.xml && \
+    cp /tmp/mapred-site.xml $HADOOP_HOME/etc/hadoop/mapred-site.xml && \
+    cp /tmp/yarn-site.xml $HADOOP_HOME/etc/hadoop/yarn-site.xml && \
+    cp /tmp/slaves $HADOOP_HOME/etc/hadoop/slaves
 
 # manage executable scripts
 RUN mv /tmp/start-hadoop.sh ~/start-hadoop.sh && \
