--- a/hadoop/lab01/Dockerfile
+++ b/hadoop/lab01/Dockerfile
@@ -12,4 +12,30 @@ RUN cd ~ && \
 
 # Set environment variables
 ENV HADOOP_HOME /usr/hadoop
-ENV PATH=$PATH:/usr/hadoop/bin:/usr/hadoop/sbin
+ENV PATH=$PATH:$HADOOP_HOME/bin:$HADOOP_HOME/sbin
+
+ENV HADOOP_PREFIX $HADOOP_HOME
+ENV HADOOP_COMMON_HOME $HADOOP_PREFIX
+ENV HADOOP_HDFS_HOME $HADOOP_PREFIX
+ENV HADOOP_MAPRED_HOME $HADOOP_PREFIX
+ENV HADOOP_YARN_HOME $HADOOP_PREFIX
+ENV HADOOP_CONF_DIR $HADOOP_PREFIX/etc/hadoop
+ENV YARN_CONF_DIR $HADOOP_PREFIX/etc/hadoop
+
+ENV HDFS_NAMENODE_USER root
+ENV HDFS_DATANODE_USER root
+ENV HDFS_SECONDARYNAMENODE_USER root
+ENV YARN_RESOURCEMANAGER_USER root
+ENV YARN_NODEMANAGER_USER root
+
+# Hdfs ports
+EXPOSE 50010 50020 50070 50075 50090 8020 9000
+
+# Mapred ports
+EXPOSE 10020 19888
+
+#Yarn ports
+EXPOSE 8030 8031 8032 8033 8040 8042 8088
+
+#Other ports
+EXPOSE 49707 2122
