comment out hdfs dfs to see if hdfs command work from docker

--- a/hadoop/lab02/Dockerfile
+++ b/hadoop/lab02/Dockerfile
@@ -55,7 +55,7 @@ RUN $HADOOP_PREFIX/etc/hadoop/hadoop-env.sh
 RUN $HADOOP_PREFIX/sbin/start-dfs.sh
 
 # set up scripts
-RUN $HADOOP_PREFIX/bin/hdfs dfs -mkdir -p /user/root
-RUN mkdir $HADOOP_PREFIX/input
-RUN cp $HADOOP_PREFIX/etc/hadoop/*.xml $HADOOP_PREFIX/input
-RUN $HADOOP_PREFIX/bin/hdfs dfs -put $HADOOP_PREFIX/etc/hadoop/ input
+#RUN $HADOOP_PREFIX/bin/hdfs dfs -mkdir -p /user/root
+#RUN mkdir $HADOOP_PREFIX/input
+#RUN cp $HADOOP_PREFIX/etc/hadoop/*.xml $HADOOP_PREFIX/input
+#RUN $HADOOP_PREFIX/bin/hdfs dfs -put $HADOOP_PREFIX/etc/hadoop/ input
